<resources>
    <string name="app_name">Food Tracker</string>
    <string name="apple_emoji">🍔</string>
    <string name="expires_on_text">Expires on %1$s - %2$s days left</string>
    <string name="expired_on_text">Expired on %1$s - %2$s days ago</string>
    <string name="add_item">Add Item</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add">Add</string>
    <string name="list">List</string>
    <string name="settings">Settings</string>
    <string name="storage">storage</string>
    <string name="foods">foods</string>
    <string name="add_new_food">Add New Food</string>
    <string name="add_new_storage_location">Add New Storage Location</string>
    <string name="purchase_date">Purchase Date</string>
    <string name="expiration_date">Expiration Date</string>
    <string name="submit">Submit</string>
    <string name="storage_location">Storage Location</string>
    <string name="custom_unit_optional">Custom Unit (optional)</string>
    <string name="food_items">Food Items</string>
    <string name="select_location">Select Location</string>
    <string name="enable_reminders">Enable Reminders</string>
    <string name="notifications">Notifications</string>
    <string name="default_storage_location">Default Storage Location</string>
    <string name="app_theme">App Theme</string>
    <string name="enable_dark_mode">Enable Dark Mode</string>
    <string name="food_item_name">Food Item Name</string>
    <string name="amount">Amount</string>
    <string name="delete_item">Delete Item</string>
    <string name="remove_food">Remove Food</string>
    <string name="food_name">Food Name</string>
    <string name="amount_left_100">Amount left: 100%</string>
    <string name="delete_storage_location">Delete Storage Location</string>
    <string name="no_food_in_this_location">No food in this location</string>
    <string name="no_food_items_yet">No food items yet</string>
    <string name="add_food_item">Add food item</string>
    <string name="search_food">Search food</string>
    <string name="your_storage">Your Storage</string>
    <string name="use_whole_numbers_only_e_g_3_bananas">Use whole numbers only (e.g. 3 bananas)</string>

    <string-array name="unit_options">
        <item>grams</item>
        <item>pounds</item>
        <item>milliliters</item>
        <item>liters</item>
        <item>pieces</item>
    </string-array>
</resources>
