<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/settingsScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:paddingBottom="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/app_theme"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/themeSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_dark_mode" />

        <com.google.android.material.textview.MaterialTextView
            android:text="@string/notifications"
            android:layout_marginTop="24dp"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/notificationsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enable_reminders" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>

