<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.FoodListFragment">

    <!-- Search Box -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/searchInputCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginTop="12dp"
        app:cardCornerRadius="12dp"
        app:cardElevation="4dp"
        android:backgroundTint="@color/card_surface"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:strokeWidth="1dp"
        app:strokeColor="@color/light_grey">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="12dp"
            android:paddingVertical="8dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_search"
                app:tint="@color/light_grey"
                android:contentDescription="@string/search_food" />

            <EditText
                android:id="@+id/searchInput"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/search_food"
                android:textColor="@color/black"
                android:textColorHint="@color/dark_text"
                android:background="@android:color/transparent"
                android:paddingStart="12dp"
                android:inputType="text" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>




    <!-- RecyclerView -->
    <FrameLayout
        android:id="@+id/recyclerContainer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/searchInputCard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="80dp"/>
    </FrameLayout>

    <!-- No Foods Text View -->
    <TextView
        android:id="@+id/noFoodText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_food_items_yet"
        android:gravity="center"
        android:textSize="16sp"
        android:visibility="gone"
        android:paddingTop="16dp"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <!-- Floating Add Button -->
    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_food"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add"
        android:contentDescription="@string/add_food_item"
        app:backgroundTint="@color/md_theme_light_primary"
        app:tint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



</androidx.constraintlayout.widget.ConstraintLayout>
